added DTOs restrictions